# that-depends

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Justfile  LICENSE  README.md  Taskfile.yml  context7.json  main.py  mkdocs.yml  pyproject.toml  test.py
.agents/skills/that-depends/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: report-scheduled-failure.sh
.github/workflows/: _checks.yml  ci.yml  publish.yml  python-package.yml  scheduled.yml
docs/: conf.py  ecosystem.md  index.md  requirements.txt
docs/css/: brand.css  code.css
docs/dev/: contributing.md  main-decisions.md
docs/examples/: fastapi.md  ioc_container.md  litestar.md
docs/experimental/: lazy.md
docs/integrations/: fastapi.md  faststream.md  litestar.md
docs/introduction/: application-settings.md  dynamic-container.md  fastapi.md  generator-injection.md  inject-factories.md  injection.md  ioc-container.md  ioc_container.md  litestar.md  multiple-containers.md  scopes.md  string-injection.md  tear-down.md  type-based-injection.md
docs/migration/: v2.md  v3.md  v4.md
docs/overrides/: main.html
docs/providers/: async-factory.md  async-resource.md  collections.md  context-resources.md  dict.md  factories.md  factory.md  list.md  object.md  resource.md  resources.md  selector.md  singleton.md  state.md
docs/testing/: fixture.md  provider-overriding.md
examples/benchmark/: RESULTS.md  __init__.py  injection.py
lib/: di.py  entry.py
modern_di/: __init__.py  injection.py  providers.py
tests/: conftest.py  container.py  creators.py  test_attr_getter.py  test_container.py  test_context_resources.py  test_deprecated.py  test_di.py  test_dynamic_container.py  test_fastapi_di.py  test_future_annotations.py  test_inject_factories.py  test_injection.py  test_litestar_di.py  test_litestar_di_simple.py  test_main_providers.py  test_meta.py  test_multiple_containers.py  test_overriding.py  test_resolver.py  test_tear_down_order.py  test_tricky_cases.py  test_typing.py  test_utils.py
tests/experimental/: test_container_1.py  test_container_2.py  test_lazy_provider.py
tests/fastapi/: test_fastapi_di.py
tests/integrations/: test_fastapi_di.py  test_fastapi_di_pass_request.py  test_litestar_di.py
tests/integrations/fastapi/: __init__.py  test_fastapi_di.py  test_fastapi_di_pass_request.py  test_fastapi_route_class.py
tests/integrations/faststream/: __init__.py  test_faststream_di.py  test_faststream_di_pass_message.py
tests/integrations/litestar/: __init__.py  test_litestar_di.py
tests/providers/: test_attr_getter.py  test_base.py  test_collections.py  test_collections_providers.py  test_context_resources.py  test_factories.py  test_inject_factories.py  test_local_singleton.py  test_main_providers.py  test_object.py  test_providers_overriding.py  test_resources.py  test_selector.py  test_selector_providers.py  test_singleton.py  test_state.py
tests/tricky_cases/: test_falsy_instances.py  test_race_condition.py
that_depends/: __init__.py  container.py  exceptions.py  injection.py  meta.py  providers.py  teardown.py  utils.py
that_depends/.agents/skills/that-depends/: SKILL.md  Skill.md
that_depends/entities/: __init__.py  context.py  resource_context.py
that_depends/experimental/: __init__.py  providers.py
that_depends/integrations/: __init__.py  fastapi.py  faststream.py
that_depends/providers/: __init__.py  attr_getter.py  base.py  collection.py  collections.py  context_resources.py  factories.py  local_singleton.py  mixin.py  object.py  resources.py  selector.py  singleton.py  state.py
